<resources>
    <string name="app_name">pizzeria</string>
    <string name="bgColorBtnPizza" translatable="false">#000000</string>
    <string name="fgColorBtnPizza" translatable="false">#fff</string>
    <string name="input" translatable="false" />
    <string name="hello_blank_fragment">Bonjour fragment vide</string>
    <string name="napolitaine">NAPOLITAINE</string>
    <string name="royale">ROYALE</string>
    <string name="quatre_fromage">QUATRE FROMAGES</string>
    <string name="montagnarde">MONTAGNARDE</string>
    <string name="raclette">RACLETTE</string>
    <string name="hawai">HAWAI</string>
    <string name="panna_cotta">PANNA COTTA</string>
    <string name="tiramisu">TIRAMISU</string>
    <string name="envoyer_la_commande">Envoyer la commande</string>
    <string name="effacer">Effacer</string>
    <string name="quatre_fromages">QUATRE FROMAGES</string>
    <string name="ajouter">Ajouter</string>
    <string name="ingredients">Ingredients</string>
    <string name="envoyer">Envoyer</string>
    <string name="pizzas">Pizzas</string>
    <string name="commande_envoy_avec_succ_s">Commande Envoyé avec succès</string>
    <string name="changer_table">Changer de Table</string>
    <string name="num_ro_de_table">Numéro de table:</string>
    <string name="valider">Valider</string>
    <string name="param_tre">Paramètre</string>
    <string name="personalis">Personalisé</string>
    <string name="menu">Menu</string>
</resources>
