<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CustomFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/effacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pizzas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/envoyer"
            android:backgroundTint="#ff0000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/effacer" />

        <Button
            android:id="@+id/ajouter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ingredients"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#000"
            app:backgroundTint="#63FFA9"
            android:text="@string/ajouter" />

        <Button
            android:id="@+id/envoyer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:backgroundTint="#498efc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pizzas"
            app:layout_constraintEnd_toStartOf="@id/effacer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/envoyer_la_commande" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:text="@string/ingredients"
            android:textColor="#8500D8"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/ajouter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/ingredients"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </ListView>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizzas"
            android:textColor="#8500D8"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pizzas"
            app:layout_constraintTop_toBottomOf="@id/ingredients"
            />

        <ListView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="90dp"
            android:id="@+id/pizzas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>